# CentauroAlexUDP

./: CMakeLists.txt
configs/: centauro_example.yaml
include/CentauroAlexUDP/: CentauroArmForceEstimation.h  exoskeleton_communication_plugin.h
include/CentauroAlexUDP/packet/: master2slave.h  pedal2slave.h  slave2master.h  slave2pedal.h
include/CentauroUDP/packet/: master2slave.h  slave2master.h
src/: .ExoskeletonCommunicationPlugin.cpp.swp  CentauroAlexUDP.cpp  CentauroArmForceEstimation.cpp  CentauroPedalUDP.cpp  ExoskeletonCommunicationPlugin.cpp  centauro_ros_autonomous_grasping.cpp  centauro_udp_receiver.cpp  centauro_udp_sender.cpp  rt_ipc.cpp
